# llm_reasoning_distribution

./: .gitignore  README.md  cleanup_data.sh  dataset_config.py  download_utils.py  main.py  process_utils.py  pyproject.toml  ruff.toml  run.sh  setup.sh  utils.py
data_processing/NuminaMath-CoT/: README.md  download_data.py  process_data.py
data_processing/NuminaMath-QwQ-CoT-5M/: README.md  download_data.py  process_data.py
data_processing/OpenThoughts3-1.2M/: README.md  download_data.py  process_data.py
data_processing/SYNTHETIC-1/: README.md  download_data.py  process_data.py
data_processing/medical-o1-reasoning-SFT/: README.md  download_data.py  process_data.py
